syntax = "proto3";
package nl.svsticky.chroma;

message DeletePhotoRequest {
  string photoId = 1;
}